/**
 * Module 7.1 - Constraint-Aware Scheduler
 *
 * IMPLEMENTATION PLAN:
 *
 * Purpose: Orchestrates constraint-aware scheduling:
 * - calls schedule engine (Module 5) to produce a candidate schedule,
 * - calls constraint evaluation (Module 6) in real time for the candidate,
 * - if violations exist, calls schedule optimizer to repair, then re-validates.
 *
 * Public API (final):
 * - executeConstraintAwareScheduling(input: ConstraintSchedulingInput): Promise<ConstraintSchedulingResult>
 * - optimizeScheduleWithConstraints(candidate: ScheduleGraph, options?: OptimizeOptions): Promise<ScheduleGraph>
 * - validateScheduleConstraints(schedule: ScheduleGraph): Promise<ValidationReport>
 *
 * Success Criteria:
 * - returns schedule with violations.count === 0 or an annotated result explaining blocking violations.
 * - budget: < 500ms on 1k tasks (baseline strategy).
 *
 * Error Policy: Never throw for validation failures; return result.status = "violations" with details.
 *
 * Observability: TODO: add timing metrics hooks.
 *
 * Dependencies: ConstraintEvaluator, ScheduleOptimizer, Module 5 ScheduleEngine, Module 6 ValidationEngine.
 *
 * ACCEPTANCE CRITERIA:
 * ☐ Files compile with tsc --noEmit
 * ☐ All public types exported from index.ts
 * ☐ No any types; use explicit interfaces
 * ☐ Each file ≤ 220 LOC
 * ☐ ESLint clean
 * ☐ Unit test scaffolds created (no runtime logic required yet)
 */

// Feature flag for baseline-only implementation
const ENABLE_BASELINE_ONLY = true;

import type { ConstraintEvaluator } from './constraint-evaluator';
import type { ScheduleOptimizer } from './schedule-optimizer';

// TODO: lift to shared-types.ts when finalized
export interface ConstraintSchedulingInput {
  tasks: Task[];
  resources?: Resource[];
  options?: OptimizeOptions;
}

export interface ConstraintSchedulingResult {
  schedule: ScheduleGraph;
  report: ValidationReport;
  status: 'ok' | 'violations';
  iterations: number;
}

export interface OptimizeOptions {
  maxIterations?: number;
  timeBudgetMs?: number;
  strategy?: string;
}

export interface ScheduleEngine {
  calculateSchedule(tasks: Task[], opts?: object): Promise<ScheduleGraph>;
}

export interface ValidationEngine {
  validate(schedule: ScheduleGraph): Promise<ValidationReport>;
}

export interface ValidationReport {
  violations: Violation[];
  hasBlocking: boolean;
  summary: string;
}

export interface Violation {
  id: string;
  type: 'HARD' | 'SOFT';
  severity: 'CRITICAL' | 'HIGH' | 'MEDIUM' | 'LOW';
  message: string;
}

export interface Task {
  id: string;
  duration: number;
  deps?: string[];
}

export interface Resource {
  id: string;
  skills?: string[];
  availability?: unknown;
}

export interface ScheduleGraph {
  nodes: Record<
    string,
    {
      start: number;
      end: number;
      resourceId?: string;
    }
  >;
}

/**
 * Orchestrates constraint-aware scheduling by coordinating schedule calculation,
 * constraint validation, and optimization in an iterative repair loop.
 *
 * @example
 * ```typescript
 * const scheduler = new ConstraintAwareScheduler(scheduleEngine, evaluator, optimizer);
 * const result = await scheduler.executeConstraintAwareScheduling({
 *   tasks: [{ id: 'T1', duration: 5 }],
 *   options: { maxIterations: 10, timeBudgetMs: 500 }
 * });
 * ```
 */
export class ConstraintAwareScheduler {
  /**
   * Creates a new constraint-aware scheduler instance.
   *
   * @param scheduleEngine - Core scheduling engine from Module 5
   * @param constraintEvaluator - Real-time constraint validator
   * @param optimizer - Schedule optimization and repair logic
   */
  constructor(
    private scheduleEngine: ScheduleEngine,
    private constraintEvaluator: ConstraintEvaluator,
    private optimizer: ScheduleOptimizer
  ) {}

  /**
   * Executes the complete constraint-aware scheduling process.
   *
   * Orchestrates the workflow:
   * 1. Generate initial schedule using Module 5 engine
   * 2. Validate constraints using Module 6 validation
   * 3. If violations exist, attempt repair using optimization strategies
   * 4. Re-validate and iterate until constraints satisfied or budget exhausted
   *
   * @param input - Scheduling input with tasks, resources, and options
   * @returns Promise resolving to complete scheduling result with validation report
   *
   * @throws Never - All validation failures returned in result.status
   */
  async executeConstraintAwareScheduling(
    input: ConstraintSchedulingInput
  ): Promise<ConstraintSchedulingResult> {
    let iterations = 0;

    // Step a) call scheduleEngine.calculateSchedule(...)
    const schedule = await this.scheduleEngine.calculateSchedule(
      input.tasks,
      input.options
    );

    // Step b) call constraintEvaluator.evaluateConstraintsRealTime(...)
    let report =
      await this.constraintEvaluator.evaluateConstraintsRealTime(schedule);

    let currentSchedule = schedule;

    // Step c) if report.hasBlocking → call optimizer.applyOptimizationStrategies(...) once with {maxIterations: 1}
    if (report.hasBlocking && ENABLE_BASELINE_ONLY) {
      const optimizeOptions = {
        maxIterations: 1,
        timeBudgetMs: 100,
        strategy: 'baseline',
      };

      currentSchedule = await this.optimizer.applyOptimizationStrategies(
        currentSchedule,
        report,
        optimizeOptions
      );
      iterations = 1;

      // Step d) re-validate; return {status:"ok" | "violations"}, include iterations
      report =
        await this.constraintEvaluator.evaluateConstraintsRealTime(
          currentSchedule
        );
    }

    const status = report.hasBlocking ? 'violations' : 'ok';

    return {
      schedule: currentSchedule,
      report,
      status,
      iterations,
    };
  }

  /**
   * Optimizes an existing schedule to reduce constraint violations.
   *
   * Applies optimization strategies iteratively to repair violations while
   * maintaining schedule feasibility and minimizing disruption to valid tasks.
   *
   * @param candidate - Initial schedule to optimize
   * @param options - Optimization parameters and constraints
   * @returns Promise resolving to optimized schedule
   */
  async optimizeScheduleWithConstraints(
    candidate: ScheduleGraph,
    _options?: OptimizeOptions
  ): Promise<ScheduleGraph> {
    // TODO: delegate to optimizer.applyOptimizationStrategies
    return candidate;
  }

  /**
   * Validates constraints for a given schedule without modification.
   *
   * Provides fast, read-only constraint checking suitable for
   * real-time feedback during interactive scheduling.
   *
   * @param schedule - Schedule to validate
   * @returns Promise resolving to comprehensive validation report
   */
  async validateScheduleConstraints(
    schedule: ScheduleGraph
  ): Promise<ValidationReport> {
    return this.constraintEvaluator.evaluateConstraintsRealTime(schedule);
  }
}
