/**
 * Module 7.1 - Baseline Optimization Strategy
 *
 * IMPLEMENTATION PLAN:
 *
 * Purpose: Simple, fast optimization for minimal violations.
 *
 * Approach: Fix only hard constraints using basic scheduling rules.
 *
 * Performance Target: < 100ms for typical schedules.
 *
 * Use Cases: Low-violation scenarios, time-critical optimization.
 */

import type {
  ScheduleGraph,
  ValidationReport,
  Violation,
} from '../constraint-aware-scheduler';
import type {
  OptimizationStrategy,
  OptimizedSchedule,
} from '../schedule-optimizer';

/**
 * Simple, fast optimization strategy focusing on hard constraint violations.
 *
 * Provides minimal viable optimization with emphasis on speed over
 * comprehensive quality improvement. Suitable for scenarios with few
 * violations or tight time constraints.
 *
 * @example
 * ```typescript
 * const strategy = new BaselineStrategy();
 * const optimized = await strategy.optimize(schedule, violations, 5);
 * ```
 */
export class BaselineStrategy implements OptimizationStrategy {
  readonly name = 'baseline';
  readonly description = 'Fast optimization targeting hard constraints only';
  readonly complexity = 'LOW' as const;

  /**
   * Applies baseline optimization focusing on hard constraint violations.
   *
   * Uses simple heuristics to resolve blocking constraints quickly:
   * - Resource conflicts: Move tasks to available time slots
   * - Dependency violations: Adjust task ordering
   * - Capacity overruns: Redistribute tasks across resources
   *
   * @param schedule - Schedule to optimize
   * @param violations - Current constraint violations
   * @param maxIterations - Maximum optimization iterations
   * @returns Promise resolving to optimized schedule
   */
  async optimize(
    schedule: ScheduleGraph,
    violations: ValidationReport,
    maxIterations: number
  ): Promise<OptimizedSchedule> {
    const startTime = Date.now();
    let currentSchedule = this.cloneSchedule(schedule);
    let iterations = 0;
    let initialViolationCount = violations.violations.length;

    // TODO: implement basic constraint repair loop
    for (iterations = 0; iterations < maxIterations; iterations++) {
      const hardViolations = violations.violations.filter(
        (v) => v.type === 'HARD'
      );

      if (hardViolations.length === 0) {
        break; // No more hard violations to fix
      }

      // Apply simple fixes for each hard violation type
      for (const violation of hardViolations.slice(0, 3)) {
        // Limit to 3 per iteration
        currentSchedule = await this.fixViolation(currentSchedule, violation);
      }

      // TODO: re-validate and update violations for next iteration
      break; // Break for scaffolding - will implement validation loop
    }

    const finalViolationCount = 0; // TODO: calculate from re-validation
    const improvementScore =
      Math.max(0, initialViolationCount - finalViolationCount) /
      Math.max(1, initialViolationCount);

    return {
      schedule: currentSchedule,
      metadata: {
        strategy: this.name,
        iterations,
        improvementScore,
        timeElapsed: Date.now() - startTime,
      },
    };
  }

  /**
   * Assesses strategy suitability based on violation characteristics.
   *
   * Baseline strategy is most suitable for:
   * - Few hard violations (< 5)
   * - No complex inter-dependencies
   * - Time-critical optimization needs
   *
   * @param violations - Constraint violations to assess
   * @returns Suitability score (0-1, higher is better)
   */
  assessSuitability(violations: ValidationReport): number {
    const hardViolations = violations.violations.filter(
      (v) => v.type === 'HARD'
    );
    const totalViolations = violations.violations.length;

    // Highly suitable for scenarios with few violations
    if (totalViolations === 0) return 0.1; // Low score if no work needed
    if (hardViolations.length === 0) return 0.3; // Only soft violations
    if (hardViolations.length <= 3) return 0.9; // Ideal range
    if (hardViolations.length <= 5) return 0.7; // Acceptable
    if (hardViolations.length <= 10) return 0.4; // Suboptimal but usable

    return 0.2; // Poor fit for complex scenarios
  }

  /**
   * Applies a simple fix for a specific constraint violation.
   *
   * @param schedule - Current schedule state
   * @param violation - Violation to address
   * @returns Modified schedule with attempted fix
   */
  private async fixViolation(
    schedule: ScheduleGraph,
    violation: Violation
  ): Promise<ScheduleGraph> {
    // TODO: implement violation-specific repair logic
    switch (
      violation.id // Using id as proxy for type until constraint types are defined
    ) {
      case 'RESOURCE_CONFLICT':
        return this.fixResourceConflict(schedule, violation);
      case 'DEPENDENCY_VIOLATION':
        return this.fixDependencyViolation(schedule, violation);
      case 'CAPACITY_OVERRUN':
        return this.fixCapacityOverrun(schedule, violation);
      default:
        return schedule; // No fix available for unknown violation types
    }
  }

  /**
   * Fixes resource conflicts by finding alternative time slots.
   *
   * @param schedule - Current schedule
   * @param violation - Resource conflict details
   * @returns Schedule with conflict resolved
   */
  private async fixResourceConflict(
    schedule: ScheduleGraph,
    _violation: Violation
  ): Promise<ScheduleGraph> {
    // TODO: implement resource conflict resolution
    // Strategy: Find next available time slot for conflicting task
    return this.cloneSchedule(schedule);
  }

  /**
   * Fixes dependency violations by adjusting task ordering.
   *
   * @param schedule - Current schedule
   * @param violation - Dependency violation details
   * @returns Schedule with dependency respected
   */
  private async fixDependencyViolation(
    schedule: ScheduleGraph,
    _violation: Violation
  ): Promise<ScheduleGraph> {
    // TODO: implement dependency violation resolution
    // Strategy: Move dependent task after prerequisite completion
    return this.cloneSchedule(schedule);
  }

  /**
   * Fixes capacity overruns by redistributing tasks.
   *
   * @param schedule - Current schedule
   * @param violation - Capacity overrun details
   * @returns Schedule with capacity respected
   */
  private async fixCapacityOverrun(
    schedule: ScheduleGraph,
    _violation: Violation
  ): Promise<ScheduleGraph> {
    // TODO: implement capacity overrun resolution
    // Strategy: Move tasks to time periods with available capacity
    return this.cloneSchedule(schedule);
  }

  /**
   * Creates a deep copy of a schedule for safe modification.
   *
   * @param schedule - Schedule to clone
   * @returns Independent copy of the schedule
   */
  private cloneSchedule(schedule: ScheduleGraph): ScheduleGraph {
    // TODO: implement proper deep cloning
    return { ...schedule };
  }
}
